--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Site settings
-title: Twenty Blog
-email: your-email@domain.com
+title: Simply Sweet Surroundings
+email: ca.barrett41@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm here to share my endeavors with learning to cook with allergies and my DIY obsessions. 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://locahost:4000" # the base hostname & protocol for your site
+url: "http://sweetcarolann.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
